--- a/main.html
+++ b/main.html
@@ -50,15 +50,12 @@
                <p>HELLO EVERYBODY, I AM <br> </p>
                <h1 id="hhjll">DENIZ <br> NAZARI </h1>
                <p class="rer"> ROOKIE SOFTWARE DEVOLOPER</p>
-               <p id="yazi">Lorem, ipsum dolor sit amet consectetur
-                    Sit illo vitae, exercitationem corporis corrupti,
-                    magni eos quo ratione autem nemo laborum
-                    provident temporibus nam necessitatibus tenetur</p>
+               <p id="yazi">Perfection is achieved not when there is nothing more to add, but rather when there is nothing more to take away.</p>
             </div>
             <div class="myself derifek">
                 <ul>
                     <li>7/04/2003</li>
-                    <li>787328797897</li>
+                    <li>@live_like_edison</li>
                     <li> bffdeniz@gmail.com</li>
                     <li>lviv ukrayna</li>
                 </ul>
