--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
                     <li>7/04/2003</li>
                     <li>@live_like_edison</li>
                     <li> bffdeniz@gmail.com</li>
-                    <li>lviv ukrayna</li>
+                    <li>lviv, ukraine</li>
                 </ul>
             </div>
         
