--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
                 <li><a href="main.html">BLOG</a></li>
                 <li><a href="https://github.com/DenizNazari">GITHUB</a></li> 
                 <li><a href="https://linkedin.com/in/deniz-nazari-b351a0201">LINKEDIN</a></li>
-                <li><a href="Flareup#1356">DISCORD</a></li>
+                <li><a href="https://discord.gg/PXvPecdmXj">DISCORD</a></li>
                
             </lu>
         </div>
