--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <div class="myself derifek">
                 <ul>
                     <li>7/04/2003</li>
-                    <li>@live_like_edison</li>
-                    <li> bffdeniz@gmail.com</li>
-                    <li>lviv, ukraine</li>
+                    <li>@deniznazari_dev</li>
+                    <li>deniznazarideveloper@gmail.com</li>
+                    <li>Turkey</li>
                 </ul>
             </div>
         
